2007-12-05  Dan Winship  <danw@gnome.org>

	* libsoup/soup-uri.c: Update for RFC 3986 changes, bgo 266516, and
	general conformance
	(soup_uri_get_protocol): match protocols case-insensitively
	(soup_uri_new_with_base): Don't fully %-decode the fragment,
	query, and path, but do %-decode anything which isn't supposed to
	be encoded. Recognize IPv6 address literals. Use stricter
	"../"-stripping rules on the path. Reject URIs with junk between
	the port number and the path.
	(soup_uri_to_string): Update for the fact that the host might be
	an IPv6 literal, and for the fact that path, query, and fragment
	are now pre-escaped.
	(soup_uri_equal): compare hostnames case-insensitively
	(uri_encoded_char): update to match RFC 3986
	(append_uri_encoded): use uppercase hex letters as recommended by
	RFC 3986.
	(soup_uri_normalize): decode only %-escapes that don't belong
	there.

	* docs/reference/tmpl/soup-uri.sgml: add some more SoupUri docs

	* tests/uri-parsing.c: Add new tests from RFC 3986, RFC 2732, RFC
	2616, bgo 266516, and elsewhere. Update some tests to match new
	parsing/unparsing rules.

2007-12-05  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_new)
	(soup_message_new_from_uri): g_intern_string() the method name
	rather than assuming it's static. Also remove the NULL==GET
	assumption.

	* libsoup/soup-method.c:
	* libsoup/soup-method.h: remove the SOUP_METHOD_ID_* macros, and
	have the SOUP_METHOD_* macros return interned strings

	* libsoup/soup-server.h (SoupServerContext): remove method_id
	field.

	* libsoup/soup-server-message.c (finalize): no longer needed,
	since smsg->method is now an interned string just like with a
	normal SoupMessage.

	* libsoup/soup-soap-message.c (soup_soap_message_new_from_uri):
	remove NULL==GET assumption

	* *.c: update

2007-12-05  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.h (SoupHTTPVersion): rename (from
	SoupHttpVersion)

	* libsoup/soup-message-headers.c: New opaque type representing